--- a/game/CMakeLists.txt
+++ b/game/CMakeLists.txt
@@ -5,6 +5,7 @@ cmake_minimum_required(VERSION 3.8.0)
 #=======================================================================================================================
 # Main Module
 list(APPEND SOURCE_FILES source/main.cpp)
+list(APPEND HEADER_FILES source/triangle.h)
 
 mark_as_advanced(${SOURCE_FILES} ${HEADER_FILES})
 
