Create shader class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@
 cmake_minimum_required(VERSION 3.8 FATAL_ERROR)
 
 # Global project name
-project(ENGINE VERSION 0.0.1)
+project(ENGINE VERSION 0.0.1 LANGUAGES C CXX)
 
 # Version preprocessor.
 add_compile_definitions(ENGINE_VERSION="0.0.1")
@@ -20,5 +20,6 @@ set(CMAKE_LEGACY_CYGWIN_WIN32 OFF)
 #=======================================================================================================================
 add_subdirectory(engine)
 add_subdirectory(game)
+
 
 
