feature: Create resource management class to load and clear shaders and textures

--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -16,6 +16,8 @@ list(APPEND ENGINE_SOURCES source/shader.cpp)
 list(APPEND ENGINE_HEADERS include/texture.h)
 list(APPEND ENGINE_SOURCES source/texture.cpp)
 
+list(APPEND ENGINE_HEADERS include/resource-manager.h)
+list(APPEND ENGINE_SOURCES source/resource-manager.cpp)
 
 
 
