--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "engine/thirdparty/glfw"]
 	path = engine/thirdparty/glfw
 	url = https://github.com/glfw/glfw.git
+[submodule "engine/thirdparty/glm"]
+	path = engine/thirdparty/glm
+	url = https://github.com/g-truc/glm.git
