--- a/Engine/CMakeLists.txt
+++ b/Engine/CMakeLists.txt
@@ -5,27 +5,25 @@ project(Engine VERSION 0.0.1)
 #=======================================================================================================================
 # Add Source and header files
 #=======================================================================================================================
-list(APPEND ENGINE_HEADERS include/engine.h)
-list(APPEND ENGINE_SOURCES source/engine.cpp)
+list(APPEND ENGINE_HEADERS Include/Engine.h)
+list(APPEND ENGINE_SOURCES Source/Engine.cpp)
 
-list(APPEND ENGINE_HEADERS include/types.h)
-list(APPEND ENGINE_HEADERS include/actor.h)
+list(APPEND ENGINE_HEADERS Include/Types.h)
+list(APPEND ENGINE_HEADERS Include/Actor.h)
 
-list(APPEND ENGINE_HEADERS include/shader.h)
-list(APPEND ENGINE_SOURCES source/shader.cpp)
+list(APPEND ENGINE_HEADERS Include/Shader.h)
+list(APPEND ENGINE_SOURCES Source/Shader.cpp)
 
-list(APPEND ENGINE_HEADERS include/camera.h)
-list(APPEND ENGINE_SOURCES source/camera.cpp)
+list(APPEND ENGINE_HEADERS Include/Camera.h)
+list(APPEND ENGINE_SOURCES Source/Camera.cpp)
 
-list(APPEND ENGINE_HEADERS include/texture.h)
-list(APPEND ENGINE_SOURCES source/texture.cpp)
+list(APPEND ENGINE_HEADERS Include/Texture.h)
+list(APPEND ENGINE_SOURCES Source/Texture.cpp)
 
-list(APPEND ENGINE_HEADERS include/resource_manager.h)
-list(APPEND ENGINE_SOURCES source/resource_manager.cpp)
+list(APPEND ENGINE_HEADERS Include/ResourceManager.h)
+list(APPEND ENGINE_SOURCES Source/ResourceManager.cpp)
 
-list(APPEND ENGINE_HEADERS include/emath.h)
-
-
+list(APPEND ENGINE_HEADERS Include/Math.h)
 
 #=======================================================================================================================
 # Define the target and add all source and header files to it
@@ -39,9 +37,9 @@ add_library(Engine::Engine ALIAS Engine)
 target_include_directories(Engine
         PUBLIC
             $<INSTALL_INTERFACE:include>
-            $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+            $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/Include>
         PRIVATE
-            ${CMAKE_CURRENT_SOURCE_DIR}/source)
+            ${CMAKE_CURRENT_SOURCE_DIR}/Source)
 
 #=======================================================================================================================
 # Set up options, properties and dependencies
@@ -63,7 +61,7 @@ endif()
 #=======================================================================================================================
 
 # GLFW
-add_subdirectory(thirdparty/glfw)
+add_subdirectory(ThirdParty/glfw)
 #find_package(glfw REQUIRED HINTS thirdparty/glfw/CMake)
 target_link_libraries(Engine PUBLIC glfw)
 
@@ -74,19 +72,20 @@ set(GLFW_BUILD_DOCS      OFF  CACHE  BOOL  "Build the GLFW documentation"     FO
 set(GLFW_INSTALL         OFF  CACHE  BOOL  "Generate installation target"     FORCE)
 
 # GLAD
-target_include_directories(Engine PUBLIC thirdparty/glad/include)
-target_sources(Engine PRIVATE thirdparty/glad/src/glad.c)
+target_include_directories(Engine PUBLIC ThirdParty/glad/include)
+target_sources(Engine PRIVATE ThirdParty/glad/src/glad.c)
 
 # STB_IMAGE
-target_include_directories(Engine PUBLIC thirdparty/stb/include)
-target_sources(Engine PRIVATE thirdparty/stb/src/stb_image.cpp)
+target_include_directories(Engine PUBLIC ThirdParty/stb/include)
+target_sources(Engine PRIVATE ThirdParty/stb/src/stb_image.cpp)
 
 # GLM
-find_package(glm REQUIRED)
+#find_package(glm REQUIRED)
+add_subdirectory(ThirdParty/glm)
 target_link_libraries(Engine PUBLIC glm)
-
+set(GLM_TEST_ENABLE  OFF  CACHE  BOOL  "Build unit tests"  FORCE)
 
 #=======================================================================================================================
 # Enable unit tests
 #=======================================================================================================================
-add_subdirectory(test)
+add_subdirectory(Test)
