--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "engine/thirdparty/glfw"]
-	path = engine/thirdparty/glfw
-	url = https://github.com/glfw/glfw.git
-[submodule "engine/thirdparty/glm"]
-	path = engine/thirdparty/glm
+[submodule "Engine/ThirdParty/glm"]
+	path = Engine/ThirdParty/glm
 	url = https://github.com/g-truc/glm.git
+[submodule "Engine/ThirdParty/glfw"]
+	path = Engine/ThirdParty/glfw
+	url = https://github.com/glfw/glfw.git
